📦 NEW: pytest编写测试函数

--- a/tests/withpytest/ch2/tasks_proj/tests/pytest.ini
+++ b/tests/withpytest/ch2/tasks_proj/tests/pytest.ini
@@ -7,6 +7,11 @@
 ; Visit http://www.pragmaticprogrammer.com/titles/bopytest for more book information.
 ;---
 [pytest]
+;如果你想在参数化中使用unicode字符串，并在终端中看到它们是(非转义的)
+disable_test_id_escaping_and_forfeit_all_rights_to_community_support = True 
+xfail_strict = true
 markers =
-    smoke
-    get
+    smoke : "marks tests as smoke"
+    get : "marks tests as get"
+
+addopts = --strict-markers
